# containerd-shim-cwasi

./: .gitignore  Cargo.toml  README.md  code-of-conduct
.github/workflows/: rust.yml
example/load-module-in-module/: README.md
example/load-module-in-module/alice-wasm-app/: Cargo.toml
example/uds-host-socket-client/: Cargo.toml
example/uds-host-socket-client/src/: main.rs  message.rs  redis_utils.rs
example/uds-host-socket-server/: Cargo.toml  README.md
examples/example-wasi/: Cargo.toml  Dockerfile  wasi_example_main.wasm
examples/example-wasi/src/: main.rs
examples/experiments/: Cargo.toml
examples/experiments/src/: main.rs
examples/fanout-native/: Cargo.toml  Dockerfile
examples/fanout-native/src/: main.bkp  main.rs
examples/fanout-wasi/: Cargo.toml
examples/fanout-wasi/src/: main.rs
examples/func_a/: Cargo.toml  Dockerfile
examples/func_a/src/: main.rs
examples/func_a_async/: Cargo.toml
examples/func_a_async/src/: main.rs
examples/func_a_fanout/: Cargo.toml  Dockerfile
examples/func_a_fanout/src/: main.rs
examples/func_a_ffiasync/: Cargo.toml  Dockerfile  README.md
examples/func_a_ffiasync/src/: main.rs
examples/func_a_vanilla/: Cargo.toml  Dockerfile
examples/func_a_vanilla/src/: main.rs
examples/func_a_wredis/: Cargo.toml  Dockerfile
examples/func_a_wredis/src/: main.rs
examples/func_b/: Cargo.toml  Dockerfile
examples/func_b/src/: main.rs
examples/func_b_fanout/: Cargo.toml  Dockerfile
examples/func_b_fanout/src/: main.rs
examples/func_b_vanilla/: Cargo.toml  Dockerfile
examples/func_b_vanilla/src/: main.rs
examples/func_b_wredis/: Cargo.toml  Dockerfile
examples/func_b_wredis/src/: main.rs
examples/grpc-server/: Cargo.toml  build.rs
examples/grpc-server/proto/: file_service.proto
examples/grpc-server/src/: main.rs
examples/http-client/: Cargo.toml  Dockerfile
examples/http-client/src/: main.rs
examples/http-server/: Cargo.toml  Dockerfile
examples/http-server/src/: main.rs
examples/load-module-in-module/: Cargo.toml
examples/run-wasm-app-from-host-int/run-wasm-app/: Cargo.toml
examples/run-wasm-app-from-host-int/wasm-app/: Cargo.toml
examples/run-wasm-app-from-host-string/: Cargo.toml  output  tutorial.md
examples/run-wasm-app-from-host-string/alice-wasm-lib/: Cargo.toml
examples/run-wasm-app-from-host-string/run-wasm-app/: Cargo.toml
examples/run-wasm-app-from-host-string/wasm-app/: Cargo.toml
examples/say-hello/src/: main.rs
examples/simplified-shim/: Cargo.toml  output  tutorial.md
examples/simplified-shim/alice-wasm-lib/: Cargo.toml  Dockerfile
examples/simplified-shim/fanout-wasi/: Cargo.toml  Dockerfile
examples/simplified-shim/run-wasm-app/: Cargo.toml
examples/storage/: Cargo.toml  storage_server
examples/storage/src/: main.rs
examples/uds-host-socket-client/: Cargo.toml  Dockerfile  app-fnA.wasm  app_fna.wasm  app_fnb.wasm
examples/uds-host-socket-client/src/: main.rs  message.rs  redis_utils.rs
examples/uds-host-socket-server/: Cargo.toml  Dockerfile  app_fnB.wasm  app_fnb.wasm
examples/uds-host-socket-server/src/: main.rs  message.rs  redis_utils.rs
examples/uds-host-socket-server/wasm-app/src/: main.rs
examples/vmsplice_client/: Cargo.toml
examples/vmsplice_client/src/: main.rs
examples/vmsplice_server/: Cargo.toml
examples/vmsplice_server/src/: main.rs
examples/wasm-client/: Cargo.toml  Dockerfile
examples/wasm-client/src/: main.rs
examples/wasm-fanout/: Cargo.toml  Dockerfile
examples/wasm-http-server/: Cargo.toml  Dockerfile
examples/wasm-server-first/: Cargo.toml  Dockerfile
examples/wasmedge-bindgen/: README.md
examples/web-server/: Cargo.toml
examples/web-server-client/: Cargo.toml  Dockerfile
experiments/: cwasi_data_prep.sh  cwasi_exp.sh  fanout_exp.sh  resources_data_prep.sh  show_mem.sh  throughtput.sh  vanilla_exp.sh  wredis_exp.sh
experiments/results/: 2fanout-native-inter-node.txt  2fanout-native-results.txt  2fanout-native-time.txt  2intra-node-fanout-native.txt  2native-fanout-intra-results.txt  embedded-fanout-results.txt  embedded_fanout2.txt  embedded_intra-node.txt  experiments.sh  experiments_http.sh  experiments_wasm.sh  fanout-iris-results.txt  fanout-iris-total.txt  fanout-iris.txt  fanout-native.txt  fanout-wasmedge-results.txt  fanout-wasmedge-results2.txt  fanout-wasmedge-total.txt  fanout-wasmedge2.txt  inter-node-fanout-iris.txt  inter-node-fanout-native.txt  inter-node-fanout-wasmedge.txt  inter-node-native-results.txt  inter-node-native-total.txt  inter-node-wasmedge-results.txt  inter-node_iris.txt  intra-node_iris.txt  intra-node_native.txt  intra-node_wasmedge.txt  lo_embedded_fanout.txt  log_http.txt  log_http_limited.txt  log_http_payload.txt  log_intra-fanout.txt  log_iris_payload.txt  log_limited.txt  log_wasm.txt  log_wasm_limited.txt  log_wasm_payload.txt  log_wasmedge_fanout.txt  (+2 more)
src/: dispatcher.rs  experiment_utils.rs  host_func_connect.rs  host_function_utils.rs  lib.rs  main.rs  main2.rs  message.rs  oci_utils.rs  redis_utils.rs  shim_listener.rs  socket_utils.rs  unix_socket.rs
src/com_mode/: com_mode_selector.rs  mod.rs
src/messaging/: dispatcher.rs  message.rs  mod.rs  redis_utils.rs  remote_messenger.rs  shim_listener.rs
src/remote/: mod.rs  redis_utils.rs
src/sandbox/: cwasi_instance.rs  cwasi_vm.rs  engine.rs  mod.rs
src/utils/: mod.rs  modules_utils.rs  oci_utils.rs  snapshot_utils.rs  time_utils.rs
(+28 files in other folders)
