[package]
name = "containerd-shim-cwasi"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
containerd-shim = "0.3.0"
containerd-shim-wasm = "0.1.1"
log = "0.4.17"
ttrpc = "0.7.1"
chrono = "0.4.23"
anyhow = "1.0.69"
cap-std = "1.0.5"
oci-spec = { version = "0.6.0", features = ["runtime"] }
thiserror = "1.0.39"
libc = "0.2.138"
wasmedge-sdk = { version = "0.7.1", features = ["async"] }
wasmprinter = "0.2.53"
regex = "1.7.1"
itertools = "0.10.5"
walkdir = "2"
hostname = "0.3.1"
serde = { version= "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
serde_derive = "1.0.159"
redis =  "0.19.0"
uuid = {version = "0.8.2", features = ["v4"]}

[[bin]]
name = "containerd-shim-cwasi-v1"
path = "src/main.rs"