[package]
name = "containerd-shim-cwasi"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
containerd-shim = "0.7.1"
#containerd-shim-wasm = "0.5.0"
containerd-shim-wasm = { git = "https://github.com/keniack/runwasi.git", branch = "main" }
log = "0.4.21"
ttrpc = "0.8.1"
chrono = "0.4.29"
anyhow = "1.0.81"
cap-std = "3.0.0"
oci-spec = { version = "0.6.4", features = ["runtime"] }
thiserror = "1.0.39"
libc = "0.2.153"
libcontainer = { version = "0.3.2", default-features = false }
wasmedge-sdk = { version = "0.13.2"}
wasmprinter = "0.202.0"
regex = "1.7.3"
itertools = "0.12.1"
walkdir = "2.5.0"
hostname = "0.4.0"
serde = { version= "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
serde_derive = "1.0.197"
redis =  "0.25.2"
uuid = {version = "1.8.0", features = ["v4"]}
tokio = { version = "1.37.0", features = ["full"]}
lazy_static = "1.4.0"
reqwest = { version = "0.12.0", features = ["blocking"] }
env_logger = "0.11.3"
tokio-stream = "0.1.15"
futures = "0.3.30"
tonic = "0.11.0"
prost-types = "0.12.3"
rand = "0.8.5"
nix = "0.25.1"

[features]
default = ["standalone", "static"]
standalone = ["wasmedge-sdk/standalone"]
static = ["wasmedge-sdk/static"]
wasi_nn = ["wasmedge-sdk/wasi_nn"]

[[bin]]
name = "containerd-shim-cwasi-v1"
path = "src/main.rs"