[package]
name = "func_a_ffiasync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge_http_req = "0.9.0"
chrono = "0.4.24"
serde_json = "1.0"
hyper_wasi = { version = "0.15", features = ["full"]}
tokio_wasi = { version = "1.25", features = ["rt", "macros", "net", "time", "io-util"]}
pretty_env_logger = "0.4.0"
