[package]
name = "uds-host-socket-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge-sdk = "0.7.1"
anyhow = "1.0.70"
regex = "1.7.1"
redis =  "0.19.0"
serde = { version= "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
serde_derive = "1.0.159"
reqwest = { version = "0.11", features = ["json"] }